Bug 42804 - ASM1061 share the same PCI ID for both IDE and AHCI mode
Summary: ASM1061 share the same PCI ID for both IDE and AHCI mode
Status: RESOLVED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-21 13:44 UTC by Hiroaki Nito
Modified: 2012-09-19 22:12 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.2.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch to ahci.c (944 bytes, patch)
2012-02-21 13:44 UTC, Hiroaki Nito
Details | Diff

Description Hiroaki Nito 2012-02-21 13:44:41 UTC
Created attachment 72455 [details]
Patch to ahci.c

Although I bought Kuroutoshikou SATA3+USB3.0-PCIE (which have ASM1061 on), it had not been correctly recognized by kernel. It seems that it operates in AHCI mode although this card has a PCI IDE class (0x0101). 

Therefore, when I applied a patch to the driver, it is normally recognized by kernel and I could use it. 

For the moment, partitioning, data transfer, and getting S.M.A.R.T information, etc. are satisfactory. 


lspci -v:
04:00.0 IDE interface: ASMedia Technology Inc. ASM1061 SATA IDE Controller (rev 01) (prog-if 85 [Master SecO PriO])
        Subsystem: ASMedia Technology Inc. Device 1060
        Flags: bus master, fast devsel, latency 0, IRQ 43
        I/O ports at e040 [size=8]
        I/O ports at e030 [size=4]
        I/O ports at e020 [size=8]
        I/O ports at e010 [size=4]
        I/O ports at e000 [size=16]
        Memory at fe500000 (32-bit, non-prefetchable) [size=512]
        Capabilities: [50] MSI: Enable+ Count=1/1 Maskable- 64bit-
        Capabilities: [78] Power Management version 3
        Capabilities: [80] Express Legacy Endpoint, MSI 00
        Capabilities: [100] Virtual Channel
        Kernel driver in use: ahci
        Kernel modules: ata_generic, pata_acpi
Comment 1 Hiroaki Nito 2012-02-21 14:04:28 UTC
I am sorry, this should have been reported to bugzilla of 3.2 brunch.
Comment 2 Alan 2012-05-12 02:16:28 UTC
Please see

Documentation/SubmittingPatches

in the kernel tree.

You should generate your patch with diff -u, add a Signed-off-by: line and send it to linux-ide@vger.kernel.org.

For various reasons we don't accept actual patches via Bugzilla

Thanks, and sorry it took a while to get to your bug report
Comment 3 Alan 2012-09-03 16:52:27 UTC
Alternative patch queued
Comment 4 Florian Mickler 2012-09-19 22:12:07 UTC
A patch referencing this bug report has been merged in Linux v3.6-rc6:

commit 7b4f6ecacb14f384adc1a5a67ad95eb082c02bd1
Author: Alan Cox <alan@linux.intel.com>
Date:   Tue Sep 4 16:25:25 2012 +0100

    ahci: Add identifiers for ASM106x devices

Note You need to log in before you can comment on or make changes to this bug.